# aviation

./: .pre-commit-config.yaml  README.md  aviation.py  mkdocs.yml  passengers_per_day.py  pyproject.toml  required_global_fleet.py  requirements.txt
.github/workflows/: check.yml
analysis/: passengers_per_day.py  required_global_fleet.py
docs/: aviation.md  index.md
docs/javascripts/: mathjax.js
src/aviation/: __init__.py  _engine.py  _model.py  fleet.py  units.py
tests/: test_engine.py  test_fleet.py
