[project]
name = "aviation"
version = "0.1.0"
description = "A simple model for global Aviation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mkdocs-bibtex>=4.4.0"]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest>=8.4.1", "ruff>=0.12.3"]

docs = [
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-material>=9.6.15",
    "mkdocs-prebuild>=0.5.0",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
]

[tool.ruff]
line-length = 100


[tool.uv]
default-groups = ["dev", "docs"]


[[tool.uv.index]]
name = "gitlab"
url = "https://gitlab.developers.cam.ac.uk/api/v4/projects/8115/packages/pypi/simple"


[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "N", "SIM", "T", "UP"]

ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"analysis/*" = ["T201"]
#"!src/**.py" = ["D"]
"tests/*" = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
